[package]
name = "mijit-beetle"
authors = ["Reuben Thomas", "Alistair Turnbull"]
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2.102"
mijit = "0.1.6"
memoffset = "0.6"
clap = "3.0.0-beta.5"
