# configure.ac for mijit-beetle
# Process this file with autoconf to produce a configure script

AC_INIT(mijit-beetle, 0.1.1, rrt@sc3d.org)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_MACRO_DIRS([m4])
LT_INIT

# Generate output files
AC_CONFIG_FILES([Makefile Cargo.toml])
AC_OUTPUT
